deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: vijayalakshmi26/wisecow:latest
        ports:
        - containerPort: 4499
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - "fortune | cowsay > /dev/null"
          initialDelaySeconds: 30  # start checking after 30 seconds
          periodSeconds: 10        # check every 10 seconds
          timeoutSeconds: 5        # wait 5 seconds for command to succeed
          failureThreshold: 6      # mark unready after 6 consecutive failures
          successThreshold: 1
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
